test/simple/correct/EnumFromTo.hs
module EnumFromTo where

main :: [Int]
main = list
  where
    list :: [Int]
    list = take 20 [8,6..]
