test/simple/typeerrors/Examples/ExprComprehension.hs
module ExprComprehension where

f :: Int
f = [ x | x <- [0..9] ]
